Adding bootstrap-icons.

--- a/ProdutosZone/Views/Produtos/Index.cshtml
+++ b/ProdutosZone/Views/Produtos/Index.cshtml
@@ -3,4 +3,7 @@
     ViewData["Title"] = "Produtos";
 }
 
-<p>Index</p>
+<a class="btn btn-secondary" asp-action="Create">
+    <i class="bi bi-plus-circle-dotted"></i>
+    Add Product
+</a>
